[gd_scene load_steps=4 format=3 uid="uid://bal2cvrrckfs1"]

[ext_resource type="Script" path="res://addons/auto_complete_menu_node/Scripts/auto_complete_assistant.gd" id="1_qnd4x"]
[ext_resource type="Script" path="res://addons/auto_complete_menu_node/Scenes/line_edit_example.gd" id="1_yf5bf"]
[ext_resource type="Theme" uid="uid://d1ff85lu8qqwm" path="res://addons/auto_complete_menu_node/Assets/base_theme.tres" id="2_2iona"]

[node name="LineEditExample" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yf5bf")

[node name="AutoCompleteAssistant" type="Node" parent="." node_paths=PackedStringArray("menu_location_node")]
script = ExtResource("1_qnd4x")
menu_location_node = NodePath("../FullCoverageTestControl")
min_char_for_suggestions = 3
use_edit_font_size = true

[node name="FullCoverageTestControl" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 136.0
offset_top = 156.0
offset_right = -205.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.50575, 0.64078, 0.432909, 1)

[node name="GridContainer" type="GridContainer" parent="FullCoverageTestControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -53.5
offset_right = 203.0
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 75
theme_override_constants/v_separation = 30
columns = 2

[node name="MakeLabel" type="Label" parent="FullCoverageTestControl/GridContainer"]
layout_mode = 2
text = "Sample Automotive Makes"

[node name="MakesLineEdit" type="LineEdit" parent="FullCoverageTestControl/GridContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
focus_neighbor_top = NodePath("/root/@EditorNode@16914/@Panel@13/@VBoxContainer@14/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@25/DockVSplitCenter/@VSplitContainer@52/@VBoxContainer@53/@PanelContainer@98/MainScreen/@CanvasItemEditor@9272/@VSplitContainer@9094/@HSplitContainer@9096/@HSplitContainer@9098/@Control@9099/@SubViewportContainer@9100/@SubViewport@9101/LineEditExample/AutoCompleteAssistant/CompleteMenu/ScrollContainer/OptionHolder/@ColorRect@17331/Button")
theme = ExtResource("2_2iona")
placeholder_text = "Insert Text"

[node name="ModelLabel" type="Label" parent="FullCoverageTestControl/GridContainer"]
layout_mode = 2
text = "Sample Make Models"

[node name="ModelsLineEdit" type="LineEdit" parent="FullCoverageTestControl/GridContainer"]
layout_mode = 2

[node name="OutOfCoverageTestControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_right = 0.5
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[connection signal="text_submitted" from="FullCoverageTestControl/GridContainer/MakesLineEdit" to="." method="_on_makes_line_edit_text_submitted"]
